@@ -7,7 +7,6 @@ import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
 import org.folio.dao.EventDescriptorDao;
 import org.folio.dao.MessagingModuleDao;
-import org.folio.okapi.common.GenericCompositeFuture;
 import org.folio.rest.jaxrs.model.Error;
 import org.folio.rest.jaxrs.model.Errors;
 import org.folio.rest.jaxrs.model.EventDescriptor;
@@ -102,7 +101,7 @@ public class MessagingModuleServiceImpl implements MessagingModuleService {
                 .withTmp(true)));
           }
         }
-        return GenericCompositeFuture.join(futures);
+        return Future.join(futures);
       }).mapEmpty();
   }
 
@@ -158,14 +157,13 @@ public class MessagingModuleServiceImpl implements MessagingModuleService {
 
   private void compareEventDescriptors(EventDescriptor eventDescriptor, EventDescriptor existingDescriptor, Errors errors) {
     if (existingDescriptor == null) {
-      String error = String.format("Event type '%s' does not exist", eventDescriptor.getEventType());
+      String error = "Event type '%s' does not exist".formatted(eventDescriptor.getEventType());
       LOGGER.error(error);
       errors.getErrors().add(new Error().withMessage(error));
     } else {
       if (!EqualsBuilder.reflectionEquals(eventDescriptor, existingDescriptor)) {
         String descriptorContent = JsonObject.mapFrom(existingDescriptor).encodePrettily();
-        String message = String.format(
-          "Publisher descriptor does not match existing descriptor for event type '%s'. To declare a publisher one should use the following descriptor: %s",
+        String message = "Publisher descriptor does not match existing descriptor for event type '%s'. To declare a publisher one should use the following descriptor: %s".formatted(
           eventDescriptor.getEventType(), descriptorContent);
         LOGGER.error(message);
         errors.getErrors().add(new Error().withMessage(message));
