@@ -1,8 +1,9 @@
 package org.folio.services.impl;
 
+import static io.vertx.core.Future.failedFuture;
+import static io.vertx.core.Future.succeededFuture;
 import static io.vertx.core.http.HttpMethod.PUT;
 import static io.vertx.core.json.Json.encode;
-import static java.lang.String.format;
 import static org.apache.commons.lang3.StringUtils.EMPTY;
 import static org.apache.commons.lang3.StringUtils.isNotBlank;
 import static org.folio.HttpStatus.HTTP_NO_CONTENT;
@@ -29,6 +30,8 @@ import org.folio.rest.util.OkapiConnectionParams;
 import org.folio.rest.util.RestUtil;
 import org.folio.services.SecurityManager;
 import org.folio.services.cache.Cache;
+import org.folio.util.PercentCodec;
+import org.folio.util.StringUtil;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.stereotype.Component;
 
@@ -79,11 +82,16 @@ public class SecurityManagerImpl implements SecurityManager {
     params.setToken(EMPTY);
     final String tenantId = params.getTenantId();
 
+    if (!systemUserConfig.isCreateUser()) {
+      LOGGER.info("getAccessToken:: System user is disabled. Using empty token for tenant {}", tenantId);
+      return succeededFuture(EMPTY);
+    }
+
     String cachedAccessToken = cache.getAccessToken(tenantId);
     if (!StringUtils.isEmpty(cachedAccessToken)) {
       LOGGER.debug("getAccessToken:: Using cached access token for tenant {}",
         params.getTenantId());
-      return Future.succeededFuture(cachedAccessToken);
+      return succeededFuture(cachedAccessToken);
     }
 
     return logInWithExpiry(params)
@@ -94,7 +102,7 @@ public class SecurityManagerImpl implements SecurityManager {
     final String tenantId = params.getTenantId();
     LOGGER.info("logInWithExpiry:: Logging in, tenantId={}", tenantId);
 
-    return Future.succeededFuture(systemUserConfig.getUserCredentialsJson())
+    return succeededFuture(systemUserConfig.getUserCredentialsJson())
       .compose(userCredentials -> doRequest(params, LOGIN_WITH_EXPIRY_URL,
         HttpMethod.POST, userCredentials.encode()))
       .compose(response -> {
@@ -115,9 +123,9 @@ public class SecurityManagerImpl implements SecurityManager {
           LOGGER.info("logInWithExpiry:: Parsed 'access' and 'refresh' tokens, caching");
           cache.setAccessToken(tenantId, accessToken);
           cache.setRefreshToken(tenantId, refreshToken);
-          return Future.succeededFuture();
+          return succeededFuture();
         }
-        String message = String.format("%s user was not logged in, received status %d",
+        String message = "%s user was not logged in, received status %d".formatted(
           systemUserConfig.getName(), response.getCode());
         LOGGER.warn("logInWithExpiry:: {}", message);
         return Future.failedFuture(message);
@@ -161,7 +169,7 @@ public class SecurityManagerImpl implements SecurityManager {
   }
 
   private Future<Void> tokenFetchFailure(String tokenName) {
-    String logMessage = String.format("Failed to fetch %s from cookies", tokenName);
+    String logMessage = "Failed to fetch %s from cookies".formatted(tokenName);
     LOGGER.warn("tokenFetchFailure:: {}", logMessage);
     return Future.failedFuture(logMessage);
   }
@@ -169,7 +177,7 @@ public class SecurityManagerImpl implements SecurityManager {
   @Override
   public Future<Void> createPubSubUser(OkapiConnectionParams params) {
     if (!systemUserConfig.isCreateUser()) {
-      return Future.succeededFuture();
+      return succeededFuture();
     }
 
     return existsPubSubUser(params)
@@ -181,8 +189,7 @@ public class SecurityManagerImpl implements SecurityManager {
           return createUser(params)
             .compose(userId -> saveCredentials(userId, params))
             .compose(userId -> establishPermissionsUser(userId, params));
-        }
-      });
+        }});
   }
 
   @Override
@@ -192,23 +199,20 @@ public class SecurityManagerImpl implements SecurityManager {
   }
 
   private Future<User> existsPubSubUser(OkapiConnectionParams params) {
-    String query = "?query=username=" + systemUserConfig.getName();
-    return doRequest(params, USERS_URL + query, HttpMethod.GET, null)
+    var cql = "username==" + StringUtil.cqlEncode(systemUserConfig.getName());
+    var url = USERS_URL + "?query=" + PercentCodec.encode(cql);
+    return doRequest(params, url, HttpMethod.GET, null)
       .compose(response -> {
-        Promise<User> promise = Promise.promise();
         if (response.getCode() == HttpStatus.HTTP_OK.toInt()) {
           JsonObject usersCollection = response.getJson();
           JsonArray users = usersCollection.getJsonArray("users");
           if (users.size() > 0) {
-            promise.complete(users.getJsonObject(0).mapTo(User.class));
-          } else {
-            promise.complete();
+            return succeededFuture(users.getJsonObject(0).mapTo(User.class));
           }
         } else {
           LOGGER.error("Failed request on GET users. Received status code {}", response.getCode());
-          promise.complete();
         }
-        return promise.future();
+        return succeededFuture();
       });
   }
 
@@ -218,17 +222,15 @@ public class SecurityManagerImpl implements SecurityManager {
 
     return doRequest(params, USERS_URL, HttpMethod.POST, encode(user))
       .compose(response -> {
-        Promise<String> promise = Promise.promise();
         if (response.getCode() == HttpStatus.HTTP_CREATED.toInt()) {
           LOGGER.info("Created {} user", systemUserConfig.getName());
-          promise.complete(id);
+          return succeededFuture(id);
         } else {
-          String errorMessage = format("Failed to create %s user. Received status code %s",
+          String errorMessage = "Failed to create %s user. Received status code %s".formatted(
             systemUserConfig.getName(), response.getCode());
           LOGGER.error(errorMessage);
-          promise.fail(errorMessage);
+          return failedFuture(errorMessage);
         }
-        return promise.future();
       });
   }
 
@@ -236,7 +238,7 @@ public class SecurityManagerImpl implements SecurityManager {
     if (existingUserUpToDate(existingUser)) {
       LOGGER.info("The {} user [{}] is up to date", systemUserConfig.getName(),
         existingUser.getId());
-      return Future.succeededFuture(existingUser);
+      return succeededFuture(existingUser);
     }
 
     LOGGER.info("Have to update the {} user [{}]", systemUserConfig.getName(),
@@ -254,7 +256,7 @@ public class SecurityManagerImpl implements SecurityManager {
         } else {
           LOGGER.error("Unable to update the {} user [{}]", systemUserConfig.getName(),
             response.getBody());
-          promise.fail(format("Unable to update the %s user: %s", systemUserConfig.getName(),
+          promise.fail("Unable to update the %s user: %s".formatted(systemUserConfig.getName(),
             response.getBody()));
         }
         return promise.future();
@@ -262,7 +264,7 @@ public class SecurityManagerImpl implements SecurityManager {
   }
 
   private Future<String> saveCredentials(String userId, OkapiConnectionParams params) {
-    return Future.succeededFuture(systemUserConfig.getUserCredentialsJson())
+    return succeededFuture(systemUserConfig.getUserCredentialsJson())
       .compose(credentials -> {
         credentials.put("userId", userId);
         return doRequest(params, CREDENTIALS_URL, HttpMethod.POST, credentials.encode())
@@ -272,7 +274,7 @@ public class SecurityManagerImpl implements SecurityManager {
               LOGGER.info("Saved {} user credentials", systemUserConfig.getName());
               promise.complete(userId);
             } else {
-              String errorMessage = format("Failed to save %s user credentials. Received status code %s",
+              String errorMessage = "Failed to save %s user credentials. Received status code %s".formatted(
                 systemUserConfig.getName(), response.getCode());
               LOGGER.error(errorMessage);
               promise.fail(errorMessage);
@@ -295,7 +297,7 @@ public class SecurityManagerImpl implements SecurityManager {
       null).compose(res1 -> {
       if (res1.getCode() == HttpStatus.HTTP_OK.toInt()) {
         if (res1.getJson().getJsonArray("permissions").equals(new JsonArray(PERMISSIONS))) {
-          return Future.succeededFuture();
+          return succeededFuture();
         }
         JsonObject requestBody = res1.getJson()
           .put("permissions", new JsonArray(PERMISSIONS));
@@ -305,9 +307,9 @@ public class SecurityManagerImpl implements SecurityManager {
             if (res2.getCode() == HttpStatus.HTTP_OK.toInt()) {
               LOGGER.info("Updated user {} with permissions [{}]", systemUserConfig.getName(),
                 StringUtils.join(PERMISSIONS, ","));
-              return Future.succeededFuture();
+              return succeededFuture();
             }
-            String errorMessage = format("Failed to update permissions %s for %s user. Received status code %s: %s",
+            String errorMessage = "Failed to update permissions %s for %s user. Received status code %s: %s".formatted(
               StringUtils.join(PERMISSIONS, ","), systemUserConfig.getName(), res2.getCode(),
               res2.getBody());
             LOGGER.error(errorMessage);
@@ -323,16 +325,16 @@ public class SecurityManagerImpl implements SecurityManager {
             if (res2.getCode() == HttpStatus.HTTP_CREATED.toInt()) {
               LOGGER.info("Created user {} with permissions [{}]", systemUserConfig.getName(),
                 StringUtils.join(PERMISSIONS, ","));
-              return Future.succeededFuture();
+              return succeededFuture();
             }
-            String errorMessage = format("Failed to add permissions %s for %s user. Received status code %s: %s",
+            String errorMessage = "Failed to add permissions %s for %s user. Received status code %s: %s".formatted(
               StringUtils.join(PERMISSIONS, ","), systemUserConfig.getName(), res2.getCode(),
               res2.getBody());
             LOGGER.error(errorMessage);
             return Future.failedFuture(errorMessage);
           });
       }
-      String errorMessage = format("Failed to get permissions for %s user. Received status code %s: %s",
+      String errorMessage = "Failed to get permissions for %s user. Received status code %s: %s".formatted(
         systemUserConfig.getName(), res1.getCode(), res1.getBody());
       LOGGER.error(errorMessage);
       return Future.failedFuture(errorMessage);
